--- a/index.html
+++ b/index.html
@@ -686,8 +686,7 @@
               </div>
               <div class="testimonial__content">
                 <p class="testimonial__quote">
-                  Hac quis arcu non neque. Sem vitae vulputate et a penatibus
-                  metus aliquet. Lacinia viverra sed diam ultricies tellus.
+                  In this place, there is a desire to be strong and not weak. Life is about striving and embracing the challenges. Growth happens when we take on what seems difficult. In the midst of everything, we keep moving forward with confidence.
                 </p>
                 <h3 class="testimonial__name">Henry Smith</h3>
                 <span class="testimonial__occupation">Creative Director</span>
@@ -696,7 +695,7 @@
             <!--======== testimonial 2 =============-->
             <div class="testimonial__card swiper-slide">
               <div class="testimonial__img-wrapper">
-                <img
+<!--                 <img
                   src="assets/img/testimonial2.jpg"
                   alt=""
                   class="testimonial__img"
@@ -708,13 +707,13 @@
                   metus aliquet. Lacinia viverra sed diam ultricies tellus.
                 </p>
                 <h3 class="testimonial__name">Ashley Robie</h3>
-                <span class="testimonial__occupation">Product Manager</span>
+                <span class="testimonial__occupation">Product Manager</span> -->
               </div>
             </div>
             <!--======== testimonial 3 =============-->
             <div class="testimonial__card swiper-slide">
               <div class="testimonial__img-wrapper">
-                <img
+<!--                 <img
                   src="assets/img/testimonial3.jpg"
                   alt=""
                   class="testimonial__img"
@@ -726,7 +725,7 @@
                   metus aliquet. Lacinia viverra sed diam ultricies tellus.
                 </p>
                 <h3 class="testimonial__name">Dave Johnson</h3>
-                <span class="testimonial__occupation">Web Developer</span>
+                <span class="testimonial__occupation">Web Developer</span> -->
               </div>
             </div>
           </div>
